--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "alexzy228/think5_1-addon",
     "description": "addons for ThinkPHP5.1+",
+    "minimum-stability": "dev",
+    "license": "Apache-2.0",
     "type": "library",
     "authors": [
         {
@@ -8,8 +10,9 @@
             "email": "1003057931@qq.com"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": ">=5.6.0"
+    },
     "autoload": {
         "psr-4": {
             "think\\": "src/"
